# Predicta

./: .gitattributes  .gitignore  Cargo.toml  README.md  sample.json
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs
crates/data/: Cargo.toml
crates/data/src/: client.rs  ingestor.rs  lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/predicta/: Cargo.toml
crates/predicta/examples/: bot_usage.rs
crates/predicta/src/: lib.rs
crates/simulator/: Cargo.toml
crates/simulator/examples/: bot_usage.rs
crates/simulator/src/: engine.rs  lib.rs
crates/tx-model/: Cargo.toml
crates/tx-model/src/: lib.rs
docs/: package-lock.json  package.json
docs/src/app/: globals.css  layout.tsx  page.tsx
docs/src/app/getting-started/: page.tsx
