[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
network = { path = "../network" }

[dev-dependencies]
mockito = "1.6"
tokio = { version = "1.43", features = ["macros"] }
