[package]
name = "predicta-data"
version = "0.1.0"
edition = "2024"
authors = ["Danish Vahajuddin Ansari"]
description = "Live RPC data ingestion for Solana transaction prediction."
license = "MIT"
repository = "https://github.com/dvansari65/Predicta"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
network = { package = "predicta-network", path = "../network", version = "0.1.0" }

[dev-dependencies]
mockito = "1.6"
tokio = { version = "1.43", features = ["macros"] }
