[package]
name = "predicta-network"
version = "0.1.0"
edition = "2024"
description = "Network state and congestion modeling for Solana."
license = "MIT"
repository = "https://github.com/dvansari65/Predicta"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
