[package]
name = "predicta-simulator"
version = "0.1.0"
edition = "2024"
authors = ["Danish Vahajuddin Ansari"]
description = "Core simulation engine for predicting Solana transaction outcomes."
license = "MIT"
repository = "https://github.com/dvansari65/Predicta"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
tx-model = { package = "predicta-tx-model", path = "../tx-model", version = "0.1.0" }
network = { package = "predicta-network", path = "../network", version = "0.1.0" }
